Update the couple section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="nav">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#" class="active">Home</a></li>
                         <li><a href="#">Story</a></li>
                         <li><a href="#">Events</a></li>
                         <li><a href="#">People</a></li>
@@ -87,11 +87,34 @@
                     <img src="img/couple/groom.jpeg" alt='happy couple'>
                     <h3>Dat Vu</h3>
                     <p>industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                    <div class="social-links">
+                        <a href="#">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="couple">
+                    <i class="fas fa-heart"></i>
                     <img src="img/couple/bride.jpeg" alt='happy couple'>
                     <h3>MinhHang Tonnu</h3>
                     <p>industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <div class="social-links">
+                        <a href="#">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -103,4 +126,6 @@
     <!-- JQuery-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/main.js"></script>
+
+    <script src="https://kit.fontawesome.com/98fa01b630.js" crossorigin="anonymous"></script>
 </body>
