Update the story section

--- a/index.html
+++ b/index.html
@@ -123,97 +123,86 @@
 
     <!-- Couple Section end-->
 
-
     <!-- Story Section start-->
+    
+    <section class="story-section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2>Our Love Story</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="story-content">
+                    <div class="row">
+                        <!-- story item start-->
+                        <div class="story-item">
+                            <i class="fas fa-heart"></i>
+                            <div class="story-text">
+                                <h3>First Meet</h3>
+                                <span class="date">29 Fev 2020</span>
+                                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+                            </div>
+                            <div class="story-img">
+                                <img src="img/story/slide1.jpeg" alt="love story">
+                            </div>
+                        </div>
+                        <!-- story item end-->
 
-    <div id="story" class="story-box main-timeline-box">
-		<div class="container">
-			<div class="row">
-				<div class="section-title">
-					<div class="title-box">
-						<h2>Our Story</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-					</div>
-				</div>
-			</div>
-			<div class="row timeline-element separline">
-				<div class="timeline-date-panel align-left">         
-                    <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-font">
-                            1 March 2018  
-                        </p>
-                    </div>
-				</div>
-				<span class="iconBackground"></span>
-				<div class="align-left">
-					<div class="timeline-text-content">
-						<h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font">First meet</h4>
-						<p class="mbr-timeline-text mbr-fonts-style display-7 story-content">
-						   We met at the wedding of our close friends and immediately found a common language, so a year later our first date happened.
-						</p>
-					 </div>
-				</div>
-			</div>
-			<div class="row timeline-element reverse separline">
-				<div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
-                    <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-font">
-                            2 April 2018  
-                        </p>
-                    </div>
-				</div>
-				<span class="iconBackground"></span>
-				<div class="col-xs-12 col-md-6 align-right">
-					<div class="timeline-text-content">
-						<h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font">First date</h4>
-						<p class="mbr-timeline-text mbr-fonts-style display-7 story-content-right">
-						   We met at the wedding of our close friends and immediately found a common language, so a year later our first date happened.
-						</p>
-					 </div>
-				</div>
-			</div>
-			<div class="row timeline-element separline">
-				<div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
-                    <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-font">
-                            1 May 2018  
-                        </p>
-                    </div>
-				</div>
-				<span class="iconBackground"></span>
-				<div class="col-xs-12 col-md-6 align-left">
-					<div class="timeline-text-content">
-						<h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font">Proposal</h4>
-						<p class="mbr-timeline-text mbr-fonts-style display-7 story-content">
-						   Fusce convallis ante id purus sagittis malesuada. Sed erat ipsum, suscipit sit amet auctor quis, vehicula ut leo. Maecenas felis nulla, tincidunt ac blandit a, consectetur quis elit.
-						</p>
-					 </div>
-				</div>
-			</div>
-			<div class="row timeline-element reverse separline">
-				<div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
-                    <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-font">
-                            2 June 2018  
-                        </p>
-                    </div>
-				</div>
-				<span class="iconBackground"></span>
-				<div class="col-xs-12 col-md-6 align-right">
-					<div class="timeline-text-content ">
-						<h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-font">Engagement</h4>
-						<p class="mbr-timeline-text mbr-fonts-style display-7 story-content-right">
-						   Proin tempus felis quis justo pretium interdum. Praesent sollicitudin lectus eu mattis egestas. Praesent luctus magna at dignissim placerat.
-						</p>
-					 </div>
-				</div>
-			</div>
-			
-		</div>
-	</div>
+                        <!-- story item start-->
+                        <div class="story-item">
+                            <i class="fas fa-heart"></i>
+                            <div class="story-text">
+                                <h3>First Date</h3>
+                                <span class="date">29 Fev 2020</span>
+                                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+                            </div>
+                            <div class="story-img">
+                                <img src="img/story/slide1.jpeg" alt="love story">
+                            </div>
+                        </div>
+                        <!-- story item end-->
 
+
+                        <!-- story item start-->
+                        <div class="story-item">
+                            <i class="fas fa-heart"></i>
+                            <div class="story-text">
+                                <h3>Proposal</h3>
+                                <span class="date">29 Fev 2020</span>
+                                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+                            </div>
+                            <div class="story-img">
+                                <img src="img/story/slide1.jpeg" alt="love story">
+                            </div>
+                        </div>
+                        <!-- story item end-->
+
+
+                        <!-- story item start-->
+                        <div class="story-item">
+                            <i class="fas fa-heart"></i>
+                            <div class="story-text">
+                                <h3>Engagement</h3>
+                                <span class="date">29 Fev 2020</span>
+                                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+                            </div>
+                            <div class="story-img">
+                                <img src="img/story/slide1.jpeg" alt="love story">
+                            </div>
+                        </div>
+                        <!-- story item end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Story Section end-->
+
+
+
+    
 
     <!-- JQuery-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
