--- a/index.html
+++ b/index.html
@@ -201,6 +201,48 @@
     <!-- Story Section end-->
 
 
+    <!-- Event Section starts-->
+
+    <section class="event-section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="section-title">
+                    <h2>Celebrate Our Love</h2>
+                </div>
+
+                <div class="row">
+                    <!-- Item Start-->
+                    <div class="event-item">
+                        <div class="event-item-inner">
+                            <h3>Ceremony</h3>
+                            <span class="date">3 Dec 2020</span>
+                            <span class="time">5:00 - 7:00 PM</span>
+                            <p>{Our Sweet Home}</p>
+                            <p>6604 Covina Lane, Pfugervile, TX 78660</p>
+                            <img src="https://img.icons8.com/external-justicon-flat-justicon/50/000000/external-wedding-romantic-love-justicon-flat-justicon.png"/>
+                        </div>
+                    </div>
+                    <!-- Item End-->
+
+                    <!-- Item Start-->
+                    <div class="event-item">
+                        <div class="event-item-inner">
+                            <h3>Reception</h3>
+                            <span class="date">3 Dec 2020</span>
+                            <span class="time">5:00 - 7:00 PM</span>
+                            <p>{Our Sweet House}</p>
+                            <p>6604 Covina Lane, Pfugervile, TX 78660</p>
+                            <img src="https://img.icons8.com/external-justicon-flat-justicon/50/000000/external-wedding-romantic-love-justicon-flat-justicon.png"/>
+                        </div>
+                    </div>
+                    <!-- Item End-->
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Event Section end-->
 
     
 
