update the navbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span></span>
                 </div>
                 <div class="nav">
-                    <ul>
+                    <ul class="testing">
                         <li><a data-scroll-nav="0" href="#" class="active">Home</a></li>
                         <li><a data-scroll-nav="1" href="#">Story</a></li>
                         <li><a data-scroll-nav="2" href="#">Events</a></li>
