--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
 <body>
 
+    <!-- Preloader Start -->
+
+    <div id="preloader">
+		<div class="preloader pulse">
+			<i class="fa fa-heartbeat" aria-hidden="true"></i>
+		</div>
+    </div>
+
     <header class="header">
         <div class="container">
             <div class="row justify-content-between align-items-center">
@@ -234,7 +242,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row" id="row-mobile">
                     <!-- Item Start-->
                     <div class="event-item">
                         <div class="event-item-inner">
